<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.LoginFragment">

        <TextView
            android:id="@+id/textview_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/title_content_left_right_margin"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/title_content_text_size"
            app:layout_constraintTop_toBottomOf="@id/textview_login_title"
            tools:layout_editor_absoluteX="232dp" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/title_content_edittext_size"
            android:layout_marginLeft="@dimen/edittext_left_right_margin"
            android:layout_marginRight="@dimen/edittext_left_right_margin"
            app:layout_constraintTop_toBottomOf="@id/textview_email"
            />

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/title_content_left_right_margin"
            android:text="Password: "
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/title_content_text_size"
            app:layout_constraintTop_toBottomOf="@id/edittext_email"
            tools:layout_editor_absoluteX="232dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/title_content_edittext_size"
            android:layout_marginLeft="@dimen/edittext_left_right_margin"
            android:layout_marginRight="@dimen/edittext_left_right_margin"
            app:layout_constraintTop_toBottomOf="@id/textview_password"
            />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/send"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_password" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>