<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="firebaseClient"
            type="com.bitpunchlab.android.foryoumessages.firebaseClient.FirebaseClientViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/blue_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".account.createAccountFragment">

            <ImageView
                android:id="@+id/art_create_account"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/adduser"
                tools:srcCompat="@drawable/adduser" />

            <TextView
                android:id="@+id/textview_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/create_account"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/art_create_account" />

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/title_content_text_size"
                app:layout_constraintTop_toBottomOf="@id/textview_login_title"
                tools:layout_editor_absoluteX="232dp" />

            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textSize="@dimen/title_content_edittext_size"
                android:text="@={firebaseClient.userName}"
                android:layout_marginLeft="@dimen/edittext_left_right_margin"
                android:layout_marginRight="@dimen/edittext_left_right_margin"
                app:layout_constraintTop_toBottomOf="@id/textview_name"
                />

            <TextView
                android:id="@+id/textview_name_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:layout_marginRight="@dimen/title_content_left_right_margin"
                android:text="@={firebaseClient.nameError}"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintTop_toBottomOf="@id/edittext_name"
                tools:layout_editor_absoluteX="232dp" />

            <TextView
                android:id="@+id/textview_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/title_content_text_size"
                app:layout_constraintTop_toBottomOf="@id/textview_name_error"
                tools:layout_editor_absoluteX="232dp" />

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@={firebaseClient.userEmail}"
                android:textSize="@dimen/title_content_edittext_size"
                android:layout_marginLeft="@dimen/edittext_left_right_margin"
                android:layout_marginRight="@dimen/edittext_left_right_margin"
                app:layout_constraintTop_toBottomOf="@id/textview_email"
                />

            <TextView
                android:id="@+id/textview_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:layout_marginRight="@dimen/title_content_left_right_margin"
                android:text="@={firebaseClient.emailError}"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintTop_toBottomOf="@id/edittext_email"
                tools:layout_editor_absoluteX="232dp" />

            <TextView
                android:id="@+id/textview_login_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/title_content_text_size"
                app:layout_constraintTop_toBottomOf="@id/textview_email_error"
                tools:layout_editor_absoluteX="232dp" />

            <EditText
                android:id="@+id/edittext_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@={firebaseClient.userPhone}"
                android:textSize="@dimen/title_content_edittext_size"
                android:inputType="phone"
                android:layout_marginLeft="@dimen/edittext_left_right_margin"
                android:layout_marginRight="@dimen/edittext_left_right_margin"
                app:layout_constraintTop_toBottomOf="@id/textview_login_phone_no"
                />

            <TextView
                android:id="@+id/textview_phone_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:layout_marginRight="@dimen/title_content_left_right_margin"
                android:text="@={firebaseClient.phoneError}"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintTop_toBottomOf="@id/edittext_phone_no"
                tools:layout_editor_absoluteX="232dp" />

            <TextView
                android:id="@+id/textview_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/title_content_text_size"
                app:layout_constraintTop_toBottomOf="@id/textview_phone_error"
                tools:layout_editor_absoluteX="232dp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textSize="@dimen/title_content_edittext_size"
                android:text="@={firebaseClient.userPassword}"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/edittext_left_right_margin"
                android:layout_marginRight="@dimen/edittext_left_right_margin"
                app:layout_constraintTop_toBottomOf="@id/textview_password"
                />

            <TextView
                android:id="@+id/textview_password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:layout_marginRight="@dimen/title_content_left_right_margin"
                android:text="@={firebaseClient.passwordError}"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintTop_toBottomOf="@id/edittext_password"
                tools:layout_editor_absoluteX="232dp" />

            <TextView
                android:id="@+id/textview_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:text="@string/confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/title_content_text_size"
                app:layout_constraintTop_toBottomOf="@id/textview_password_error"
                tools:layout_editor_absoluteX="232dp" />

            <EditText
                android:id="@+id/edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@={firebaseClient.userConfirmPassword}"
                android:textSize="@dimen/title_content_edittext_size"
                android:inputType="textPassword"
                android:layout_marginLeft="@dimen/edittext_left_right_margin"
                android:layout_marginRight="@dimen/edittext_left_right_margin"
                app:layout_constraintTop_toBottomOf="@id/textview_confirm_password"
                />

            <TextView
                android:id="@+id/textview_confirm_password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/title_content_left_right_margin"
                android:layout_marginRight="@dimen/title_content_left_right_margin"
                android:text="@={firebaseClient.confirmPasswordError}"
                android:textColor="@color/orange"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintTop_toBottomOf="@id/edittext_confirm_password"
                tools:layout_editor_absoluteX="232dp" />

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/send"
                android:textSize="@dimen/button_text_size"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_confirm_password_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>